<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Background"
    >

<!--Layout-->
<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:srcCompat="@drawable/weather_app_layout_prototype"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--         />-->

    <ImageView
        android:id="@+id/WeatherAppIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/AddLocationIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/CityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CityTitle"
        android:textColor="@color/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="@font/kalameh_black"
        android:textSize="40sp"
         />

<!--Static weather Image-->
    <ImageView
        android:id="@+id/WeatherStatusIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unknown_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/WeatherStatus"
         />


    <TextView
        android:id="@+id/CityTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CityTemp"
        android:textColor="@color/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="@font/kalameh_regular"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/CityDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CityDescription"
        android:textColor="@color/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="@font/kalameh_regular"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/UserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserLabel"
        android:textColor="@color/Accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="@font/kalameh_thin"
        android:textSize="15sp"
        />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/WeatherRecyclerView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--         />-->

</androidx.constraintlayout.widget.ConstraintLayout>